# CampusEventer_webknot

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .replit  README.md  add-colleges.mjs  create-tables.mjs  database.sqlite  eslint.config.js  insert-colleges.js  insert-data.sql  package-lock.json  package.json  pyproject.toml  replit.md  seed-colleges.ts  seed-data.js  tailwind.config.ts  test-server.js  vite.config.ts
.github/workflows/: ci-cd.yml
attached_assets/: Pasted-Build-a-Campus-Event-Management-Platform-MVP-as-a-full-stack-web-application-with-the-following-requ-1757165509669_1757165509670.txt
chatbot/: main.py
chatbot/api/: chatbot_routes.py
chatbot/models/: chat_models.py
chatbot/services/: groq_service.py
client/src/: App.tsx  index.css
client/src/components/: event-card.tsx  event-card.tsx.backup  navbar.tsx
client/src/components/charts/: attendance-chart.tsx  event-popularity-chart.tsx
client/src/components/chatbot/: chat-interface.tsx  index.ts
client/src/components/forms/: event-form.tsx  feedback-form.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: protected-route.tsx
client/src/pages/: admin-dashboard.tsx  auth-page.tsx  event-details.tsx  home-page.tsx  student-dashboard.tsx
migrations/: 0000_demonic_turbo.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: chatbot-service.ts  db-sqlite.ts  db.ts  index.ts  routes.ts  storage.ts  vitest.config.ts
server/test/: example.test.ts  setup.ts
shared/: schema.ts
