[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cors>=1.0.1",
    "fastapi>=0.116.1",
    "groq>=0.31.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
